# client-python

./: .gitignore  README.md  pyproject.toml
agentmesh/: __init__.py  canonicaljson.py  client.py  envelope.py  errors.py  identity.py  types.py
agentmesh/settlement/: __init__.py  evm.py  exceptions.py  service.py  types.py
agentmesh/settlement/abi/: AgentMeshEscrow.json
scripts/: demo_evm_local.py  smoke_evm_local.sh
tests/: test_accept_rules.py  test_client_e2e.py  test_envelope.py  test_identity.py  test_settlement_evm.py  test_settlement_service.py
